<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BarcodeInformationActivity"
    android:background="?attr/fragView_color"
    android:id="@+id/barcodeInformationView">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimaryVariant">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/pGenericName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:paddingLeft="10dp"
                android:text="@string/product_name_label"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/white"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/pImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/image_of_the_product"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/btn_dialog"
                        android:paddingVertical="10dp"
                        android:maxWidth="250dp"
                        android:maxHeight="250dp"
                        android:adjustViewBounds="true"/>

                    <ImageView
                        android:id="@+id/imageNutriscore"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:contentDescription="@string/nutriscore_of_the_product"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_nutriscore_unknown" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/pName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="24sp"
                android:textColor="?attr/text_color"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/informationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">
                    <TextView
                        android:id="@+id/quantity_name"
                        android:layout_width="80dp"
                        android:layout_height="28dp"
                        android:text="?attr/quantity"
                        android:textColor="?attr/text_color"
                        android:textSize="20sp"
                        android:layout_marginStart="10dp"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.138"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.526"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/quantity_name2"
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:textColor="?attr/text_color"
                        android:text="1"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:layout_marginStart="10dp"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.526"
                        tools:visibility="visible" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="80dp"
                        android:layout_height="28dp"
                        android:text="?attr/product_energy_label"
                        android:textColor="?attr/text_color"
                        android:textSize="20sp"
                        android:layout_marginStart="10dp" />
                    <TextView
                        android:id="@+id/pEnergy"
                        android:layout_width="wrap_content"
                        android:textColor="?attr/text_color"
                        android:layout_height="30dp"
                        android:textSize="20sp"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:id="@+id/pEnergyUnit"
                        android:layout_width="wrap_content"
                        android:textColor="?attr/text_color"
                        android:layout_height="30dp"
                        android:textSize="20sp"
                        android:layout_marginStart="10dp"
                        android:text="?attr/energy_unit"/>

                    <Switch
                        android:id="@+id/pEnergyUnitSwitch"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingEnd="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:checked="true"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/showAdditionalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="?attr/text_color"
                android:textAlignment="textEnd"
                android:paddingRight="10dp"
                android:text="?attr/show_add_info"
                android:layout_marginVertical="30dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:focusable="true" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/incr_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/colorPrimaryVariant"
                    android:onClick="increment"
                    android:text="+"
                    android:gravity="center"
                    android:includeFontPadding = "false"
                    android:textSize="34sp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/incr_button2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/colorPrimaryVariant"
                    android:onClick="decrement"
                    android:text="-"
                    android:gravity="center"
                    android:includeFontPadding = "false"
                    android:textSize="34sp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="100dp">
                <Button
                    android:id="@+id/add_to_counter_button"
                    android:layout_width="215dp"
                    android:layout_height="56dp"
                    android:backgroundTint="@color/colorPrimaryVariant"
                    android:onClick="addToUser"
                    android:text="?attr/add_counter"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck"
                    tools:visibility="visible"
                    android:textAllCaps="false"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>