<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimaryVariant"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profiletv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:scaleType="centerCrop"
                app:civ_circle_background_color="@color/colorPrimaryVariant" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameptv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="HisName"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/onlinetv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Online"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatrecycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/chatlayout"
        android:layout_below="@id/toolbar" />

    <LinearLayout
        android:id="@+id/chatlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/attachbtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_baseline_attach_file_24"
            android:contentDescription="Nothing" />

        <EditText
            android:id="@+id/messaget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="Start Typing"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="15dp" />

        <ImageButton
            android:id="@+id/sendmsg"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="Send the message"
            android:src="@drawable/ic_baseline_send_24" />

    </LinearLayout>

</RelativeLayout>