...
    <string name="welcome_to_the_home_page_n_choose_a_date_to_check_what_you_ve_consumed_de">Willkommen auf der Startseite! \nWählen Sie ein Datum, um zu sehen, was Sie konsumiert haben.</string>

    <string name="message_deleted_en">Message Deleted</string>

    <string name="delete_message_en">Delete Message</string>

    <string name="delete_en">Delete</string>

    <string name="delete_your_own_messages_en">You only can delete your messages</string>

    <string name="are_you_sure_to_delete_this_message_en">Are you sure you want to delete this message ?</string>

    <string name="pick_image_from_en">Pick image from:</string>
...
    <string name="quit">Quit</string>
    <string name="restart">Restart</string>

    <string name="button">Button</string>

    <string name="cancel_en">Cancel</string>
    <string name="typing_en">Typing....</string>
    <string name="last_seen_en">Last Seen:</string>

    <string name="refresh">refresh!</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="_0hp">0hp</string>
    <string name="zero">0</string>
...
