...
            android:layout_height="wrap_content"
            android:text="?attr/remove_friend"
            android:backgroundTint="?attr/gradientPrimary_color"
            android:focusable="false"/>

        <Button
            android:id="@+id/goToChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat"
            android:backgroundTint="?attr/gradientPrimary_color"
            android:contentDescription="@string/go_to_chat"
            android:focusable="false"
...
